--- a/nutscash/umbrel-app.yml
+++ b/nutscash/umbrel-app.yml
@@ -12,4 +12,4 @@ repo: https://github.com/candypoets/nutscash
 support: https://github.com/candypoets/nutscash/issues
 icon: ./icon.svg
 port: 3000
-path: "/"
+path: ""
