Add Docker Compose files for Affine and Nutscash
This commit includes new Docker Compose configurations for Affine and
updates to Nutscash, enhancing service setups and dependencies.

--- a/nutscash/docker-compose.yml
+++ b/nutscash/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: nut_web_1
+      APP_PORT: 80
   app:
     image: ticruz38/nuts:dev
     restart: unless-stopped
